# SearchVacancy_coursework

./: README.md  config.py  main.py  pyproject.toml
data/: result.json  vacancies.json
src/: base_class.py  fileworker.py  search_vacancies.py  utils.py  vacancy.py
tests/: conftest.py  test_utils.py  test_vacancy.py
