[tool.poetry]
name = "searchvacancy-coursework"
version = "0.1.0"
description = ""
authors = ["Artem Zhitkov <aptem_deadly@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
